[gd_scene load_steps=2 format=3 uid="uid://d1d1r74mxi1bh"]

[ext_resource type="Script" uid="uid://b5yycw7r8rr0e" path="res://Scripts/QCM.gd" id="1_isbeq"]

[node name="QCM" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_isbeq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="msg" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.0
offset_top = -311.0
offset_right = 374.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="msg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="msg_button" type="Button" parent="msg"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.73
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 80
text = "Continuer"

[node name="msg_title" type="Label" parent="msg"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.265
offset_bottom = 0.169983
grow_horizontal = 2
theme_override_font_sizes/font_size = 120
text = "PERDU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="msg_text" type="RichTextLabel" parent="msg"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.235
anchor_right = 1.0
anchor_bottom = 0.701
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "Default"

[node name="Titre" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 139.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "TITRE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Default Button"

[connection signal="pressed" from="msg/msg_button" to="." method="_on_msg_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
